# blurt

./: .coverage  .pre-commit-config.yaml  CLAUDE.md  DEV-TODO.md  LICENSE  README.md  check_bindings.py  deep_check_bindings.py  find_framework_key.py  main.py  pyproject.toml  test_keys.py  test_keys_passive.py
src/blurt/: __init__.py  audio_recorder.py  cli.py  config.py  hotkey_handler.py  main.py  simple_audio.py  simple_hotkey.py  sound_player.py  speech_recognizer.py  text_output.py
src/tab_voice/: __init__.py  audio_recorder.py  config.py  main.py  simple_audio.py
tests/: test_cli.py  test_config.py  test_sound_player.py  test_speech_recognizer.py  test_text_output.py
